--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo": "^53",
     "expo-camera": "~16.1.6",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.28.13",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
